add jest and test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "module": "nodenext",
+    "module": "esnext",
     "target": "es2024",
     "lib": ["ES2024"],
+    "moduleResolution": "Bundler",
+    "isolatedModules": true,
 
     "paths": {
       "@/*": ["./src/*"]
