--- a/package.json
+++ b/package.json
@@ -2,18 +2,34 @@
   "name": "rocketlog-api",
   "version": "1.0.0",
   "description": "API de entregas e encomendas",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "dev": "tsx --watch src/server.ts"
+    "dev": "tsx --watch --env-file .env src/server.ts",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll --runInBand"
   },
   "author": "Jeferson",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1"
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
+    "express": "^5.2.1",
+    "express-async-error": "^0.0.2",
+    "jsonwebtoken": "^9.0.3",
+    "zod": "^4.3.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "prisma": "^7.2.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
