--- a/package.json
+++ b/package.json
@@ -3,21 +3,27 @@
   "version": "1.0.0",
   "description": "API de entregas e encomendas",
   "main": "server.ts",
+  "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
-    "dev": "tsx --watch --env-file .env src/server.ts",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll --runInBand"
+    "start:dev": "tsx --watch src/server.ts",
+    "migrate": "npx prisma migrate dev && npx prisma generate",
+    "test:dev": "NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll --runInBand",
+    "build": "tsup",
+    "start": "node build/server.js"
   },
   "author": "Jeferson",
   "license": "ISC",
   "dependencies": {
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
-    "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "express-async-error": "^0.0.2",
     "jsonwebtoken": "^9.0.3",
-    "zod": "^4.3.2"
+    "zod": "^4.3.2",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
@@ -25,11 +31,13 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/supertest": "^6.0.3",
+    "@types/bcrypt": "^6.0.0",
     "jest": "^30.2.0",
     "prisma": "^7.2.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
+    "tsup": "^8.5.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
