--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,10 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es2024",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "target": "ES2024",
     "lib": ["ES2024"],
-    "moduleResolution": "Bundler",
     "isolatedModules": true,
-
-    "paths": {
-      "@/*": ["./src/*"]
-    },
 
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
