--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start:dev": "tsx --watch src/server.ts",
     "migrate": "npx prisma migrate dev && npx prisma generate",
+    "db:deploy": "npx prisma migrate deploy && npx prisma generate",
     "test:dev": "NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll --runInBand",
     "build": "tsup",
     "start": "node build/server.js"
